--- a/index-2.html
+++ b/index-2.html
@@ -33,8 +33,7 @@
     <link rel="preload" href="../cdn.jsdelivr.net/npm/tailwindcss%402.2.19/dist/tailwind.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="../cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="assets/fonts/SimpleHandmade.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 
 <body class="bg-black overflow-hidden flex flex-col h-screen">
